Create image directory if it does not already exist